Stop form errors from appearing twice (thanks StackOverflow: https://stackoverflow.com/questions/53710769/custom-formatted-django-form-errors-appearing-twice)

--- a/jwql/website/apps/jwql/static/css/jwql.css
+++ b/jwql/website/apps/jwql/static/css/jwql.css
@@ -116,6 +116,11 @@
     border-color: #cfd4da;
 }
 
+/*Make the form fields be inline*/
+.homepage_form_fieldWrapper {
+    display: inline;
+}
+
 /*Don't let the search bar be super long*/
 .input-group {
     width: 250px;
